--- a/src/CognitiveKioskUWP/Controls/Speech.xaml
+++ b/src/CognitiveKioskUWP/Controls/Speech.xaml
@@ -11,11 +11,24 @@
 
     <Grid x:Name="mainGrid" Background="Transparent">
         <CaptureElement x:Name="captureControl" Margin="20" Stretch="UniformToFill" IsHitTestVisible="False"/>
-        <Border x:Name="borderTranslation" VerticalAlignment="Bottom" Background="#996E6E6E" Margin="20">
-            <StackPanel>
-                <TextBlock x:Name="textTranslationOriginal" HorizontalAlignment="Stretch" Text="" TextWrapping="Wrap" FontSize="30" TextAlignment="Left" Foreground="White" MaxLines="1" TextTrimming="CharacterEllipsis"/>
-                <TextBlock x:Name="textTranslation" HorizontalAlignment="Stretch" Text="" TextWrapping="Wrap" FontSize="30" TextAlignment="Left" Foreground="White" MaxLines="1" TextTrimming="CharacterEllipsis"/>
+        <Grid x:Name="borderTranslation" VerticalAlignment="Stretch" Margin="20">
+            <Grid.RowDefinitions>
+                <RowDefinition Height=".5*"/>
+                <RowDefinition Height=".5*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width=".7*"/>
+                <ColumnDefinition Width=".3*"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="1" Background="#996E6E6E">
+                <TextBlock x:Name="textTranslationOriginalRT" HorizontalAlignment="Stretch" Text="" TextWrapping="Wrap" FontSize="16" TextAlignment="Left" Foreground="White"/>
+                <TextBlock x:Name="textTranslationOriginal" HorizontalAlignment="Stretch" Text="" TextWrapping="Wrap" FontSize="12" TextAlignment="Left" Margin="0,10,0,0" Foreground="White"/>
             </StackPanel>
-        </Border>
+            <StackPanel Grid.Column="1" Background="#996E6E6E" Grid.Row="1">
+                <Rectangle Fill="White" Height="1" ></Rectangle>
+                <TextBlock x:Name="textTranslationRT" HorizontalAlignment="Stretch" Text="" TextWrapping="Wrap" FontSize="16" TextAlignment="Left" Foreground="White"  />
+                <TextBlock x:Name="textTranslation" HorizontalAlignment="Stretch" Text="" TextWrapping="Wrap" FontSize="12" TextAlignment="Left" Foreground="White" Margin="0,10,0,0" />
+            </StackPanel>
+        </Grid>
     </Grid>
 </UserControl>
