--- a/src/CognitiveKioskUWP/MainPage.xaml
+++ b/src/CognitiveKioskUWP/MainPage.xaml
@@ -1,7 +1,6 @@
 ﻿<Page
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MTCSTLKiosk"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:Custom="using:MTCSTLKiosk.Controls"
@@ -22,20 +21,11 @@
             <Grid.Resources>
                 <Storyboard x:Name="InfoFadeOut">
                     <DoubleAnimation Storyboard.TargetName="borderInfo" Storyboard.TargetProperty="Opacity"
-                            From="1.0" To="0.0" Duration="0:0:5" />
+                            From="1.0" To="0.0" Duration="0:0:10" />
                 </Storyboard>
             </Grid.Resources>
             <TextBlock HorizontalAlignment="Center" Text="COME" TextWrapping="Wrap" VerticalAlignment="Center" FontWeight="Bold" FontSize="150" Foreground="White" />
             <Custom:Captions x:Name="captionsControl"  Tapped="Settings_Tapped" />
-            <Border x:Name="borderInfo" Background="White" Margin="10,10,10,0" Height="200" VerticalAlignment="Top" BorderBrush="Black" BorderThickness="5,5,5,5">
-                <Grid Tapped="Settings_Tapped" IsHitTestVisible="True" Background="White">
-                    <StackPanel Orientation="Vertical">
-                        <TextBlock Text="Important-ish Info!" Margin="5" FontSize="48" FontWeight="Bold" TextAlignment="Center" IsHitTestVisible="False"/>
-                        <TextBlock x:Name="textUserInfo" Text="Click here or on screen after start to get to settings" Margin="10" FontSize="32" TextWrapping="WrapWholeWords" IsHitTestVisible="False"/>
-                    </StackPanel>
-
-                </Grid>
-            </Border>
         </Grid>
         <Grid Background="#7fba00" Grid.Row="0" Grid.Column="1">
             <TextBlock HorizontalAlignment="Center" Text="SAY" TextWrapping="Wrap" VerticalAlignment="Center" FontWeight="Bold" FontSize="150" Foreground="White" />
@@ -47,25 +37,17 @@
         </Grid>
         <Grid Background="#ffb900" Grid.Row="1" Grid.Column="1">
             <TextBlock HorizontalAlignment="Center" Text="&#xEB68;" TextWrapping="Wrap" VerticalAlignment="Center" FontWeight="Bold" FontSize="150" Foreground="White" FontFamily="Segoe MDL2 Assets" />
-            <Grid x:Name="gridCaptureBottomRight" Tapped="Settings_Tapped" Background="Transparent">
-                <CaptureElement x:Name="captureBottomRight" Margin="20" Stretch="UniformToFill" IsHitTestVisible="False"/>
-                <Border VerticalAlignment="Bottom" Background="#82F25022" Margin="20">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width=".5*"/>
-                            <ColumnDefinition Width=".5*"/>
-                            <ColumnDefinition Width=".5*"/>
-                        </Grid.ColumnDefinitions>
-                        <TextBlock x:Name="textFaces1" Grid.Column="0" HorizontalAlignment="Stretch" Text="" TextWrapping="Wrap" FontSize="15" TextAlignment="Left" Foreground="White" FocusVisualMargin="2,0,0,0" Margin="5,0,0,0"/>
-                        <TextBlock x:Name="textFaces2" Grid.Column="1" HorizontalAlignment="Stretch" Text="" TextWrapping="Wrap" FontSize="15" TextAlignment="Left" Foreground="White"/>
-                        <TextBlock x:Name="textFaces3" Grid.Column="2" HorizontalAlignment="Stretch" Text="" TextWrapping="Wrap" FontSize="15" TextAlignment="Left" Foreground="White"/>
-                    </Grid>
-                </Border>
-                <local:AgeControl x:Name="ageControl1" HorizontalAlignment="Left" Margin="119,114,0,0" VerticalAlignment="Top" VerticalContentAlignment="Top" Visibility="Collapsed"  />
-                <local:AgeControl x:Name="ageControl2" HorizontalAlignment="Left" Margin="119,114,0,0" VerticalAlignment="Top" VerticalContentAlignment="Top" Visibility="Collapsed" />
-                <local:AgeControl x:Name="ageControl3" HorizontalAlignment="Left" Margin="119,114,0,0" VerticalAlignment="Top" VerticalContentAlignment="Top" Visibility="Collapsed" />
-            </Grid>
+            <Custom:Faces x:Name="facesControl"  Tapped="Settings_Tapped" />
         </Grid>
+        <Border x:Name="borderInfo"  Margin="0" Height="200" VerticalAlignment="Center" BorderBrush="White" BorderThickness="0" Grid.RowSpan="2" Grid.ColumnSpan="2" HorizontalAlignment="Center">
+            <Grid Tapped="Settings_Tapped" IsHitTestVisible="True" Background="{ThemeResource SystemControlAcrylicElementBrush}">
+                <StackPanel Orientation="Vertical">
+                    <TextBlock Text="Click Me for Settings!" Margin="5" FontSize="48" FontWeight="Bold" TextAlignment="Center" IsHitTestVisible="False" FocusVisualPrimaryBrush="White" />
+                    <TextBlock x:Name="textUserInfo" Text="Click here or on screen after start to get to settings page" Margin="10" FontSize="32" TextWrapping="WrapWholeWords" IsHitTestVisible="False" />
+                </StackPanel>
+
+            </Grid>
+        </Border>
 
     </Grid>
 </Page>
