--- a/src/CognitiveKioskUWP/SettingsPage.xaml
+++ b/src/CognitiveKioskUWP/SettingsPage.xaml
@@ -9,68 +9,67 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-        
-        <StackPanel Orientation="Vertical">
-            <TextBlock Text="Settings" TextWrapping="Wrap" FontSize="48" Margin="10"/>
-            <TextBlock Text="Cloud" TextWrapping="Wrap" FontSize="38" Margin="10"/>
-            <Grid Margin="10">
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Speech API Key" TextAlignment="Center" VerticalAlignment="Center"></TextBlock>
-                    <TextBox x:Name="textSpeechAPIKey" Text="" Margin="20,0,0,0" Width="400px" TextChanged="textSpeechAPIKey_TextChanged" />
-                </StackPanel>
-            </Grid>
 
-            <Grid Margin="10">
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Speech Region" TextAlignment="Center" VerticalAlignment="Center"></TextBlock>
-                    <ComboBox x:Name="dropdownRegion"  Margin="20,0,0,0" SelectionChanged="dropdownRegion_SelectionChanged">
+        <ScrollViewer
+            x:Name="contentSV"
+            Grid.Row="1"
+            Padding="20,0,0,0"
+            IsTabStop="False"
+            UseSystemFocusVisuals="False"
+            VerticalScrollBarVisibility="Auto"
+            VerticalScrollMode="Auto">
+            <StackPanel Orientation="Vertical">
+                <TextBlock Text="Settings" 
+                    Style="{StaticResource TitleTextBlockStyle}"
+                    Margin="0,40,0,0"
+                    FontWeight="Normal"/>
+                <TextBlock Text="Cognitive Services Settings (Obtain keys from an Azure Subscription)" 
+                    Style="{StaticResource TitleTextBlockStyle}"
+                    Margin="0,40,0,0"
+                    FontWeight="Normal"/>
+                <StackPanel Margin="0,10,0,0">
+                    <TextBlock Text="Speech API Key" Margin="5"></TextBlock>
+                    <TextBox x:Name="textSpeechAPIKey" Text="" Margin="5"  Width="400px" TextChanged="textSpeechAPIKey_TextChanged" HorizontalAlignment="Left" />
+                </StackPanel>
+
+                <StackPanel Margin="0,10,0,0">
+                    <TextBlock Text="Speech Region" Margin="5"></TextBlock>
+                    <ComboBox x:Name="dropdownRegion"  Margin="5" SelectionChanged="dropdownRegion_SelectionChanged">
                         <ComboBoxItem Content="east"></ComboBoxItem>
                     </ComboBox>
                 </StackPanel>
-            </Grid>
-            <Grid Margin="10">
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Vision API Key" TextAlignment="Center" VerticalAlignment="Center"></TextBlock>
-                    <TextBox x:Name="textVisionAPIKey" Text="" Margin="20,0,0,0" Width="400px" TextChanged="textVisionAPIKey_TextChanged" />
+                <StackPanel Margin="0,10,0,0">
+                    <TextBlock Text="Vision API Key"  Margin="5"></TextBlock>
+                    <TextBox x:Name="textVisionAPIKey" Text="" Margin="5" Width="400px" TextChanged="textVisionAPIKey_TextChanged" HorizontalAlignment="Left" />
                 </StackPanel>
-            </Grid>
-            <Grid Margin="10">
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Vision Region" TextAlignment="Center" VerticalAlignment="Center"></TextBlock>
-                    <ComboBox x:Name="dropdownVisionRegion"  Margin="20,0,0,0" SelectionChanged="dropdownVisionRegion_SelectionChanged">
-                        <ComboBoxItem Content="east"></ComboBoxItem>
-                    </ComboBox>
+                <StackPanel Margin="0,10,0,0">
+                    <TextBlock Text="Vision Region" Margin="5" ></TextBlock>
+                        <ComboBox x:Name="dropdownVisionRegion"  Margin="5" SelectionChanged="dropdownVisionRegion_SelectionChanged">
+                            <ComboBoxItem Content="east"></ComboBoxItem>
+                        </ComboBox>
                 </StackPanel>
-            </Grid>
-            <Grid Margin="10">
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Face API Key" TextAlignment="Center" VerticalAlignment="Center"></TextBlock>
-                    <TextBox x:Name="textFaceAPIKey" Text="" Margin="20,0,0,0" Width="400px" TextChanged="textFaceAPIKey_TextChanged" />
+                <StackPanel Margin="0,10,0,0">
+                    <TextBlock Text="Face API Key" Margin="5" ></TextBlock>
+                    <TextBox x:Name="textFaceAPIKey" Text="" Margin="5" Width="400px" TextChanged="textFaceAPIKey_TextChanged" HorizontalAlignment="Left" />
                 </StackPanel>
-            </Grid>
-            <Grid Margin="10">
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Face Region" TextAlignment="Center" VerticalAlignment="Center"></TextBlock>
-                    <ComboBox x:Name="dropdownFaceRegion"  Margin="20,0,0,0" SelectionChanged="dropdownFaceRegion_SelectionChanged">
-                        <ComboBoxItem Content="east"></ComboBoxItem>
-                    </ComboBox>
+                <StackPanel Margin="0,10,0,0">
+                    <TextBlock Text="Face Region"   Margin="5"></TextBlock>
+                        <ComboBox x:Name="dropdownFaceRegion"  Margin="5" SelectionChanged="dropdownFaceRegion_SelectionChanged">
+                            <ComboBoxItem Content="east"></ComboBoxItem>
+                        </ComboBox>
                 </StackPanel>
-            </Grid>
-            <Grid Margin="10">
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Camera" TextAlignment="Center" VerticalAlignment="Center"></TextBlock>
-                    <ComboBox x:Name="dropdownCamera"  Margin="20,0,0,0" SelectionChanged="dropdownCamera_SelectionChanged" >
-                        <ComboBoxItem Content="east"></ComboBoxItem>
-                    </ComboBox>
+                <TextBlock Text="Hardware" 
+                    Style="{StaticResource TitleTextBlockStyle}"
+                    Margin="0,40,0,0"
+                    FontWeight="Normal"/>
+                <StackPanel Margin="0,10,0,0">
+                    <TextBlock Text="Camera" Margin="5" ></TextBlock>
+                        <ComboBox x:Name="dropdownCamera"  Margin="5" SelectionChanged="dropdownCamera_SelectionChanged" >
+                            <ComboBoxItem Content="east"></ComboBoxItem>
+                        </ComboBox>
                 </StackPanel>
-            </Grid>
-            <Grid Margin="10">
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Send me all your input" TextAlignment="Center" VerticalAlignment="Center"></TextBlock>
-                    <HyperlinkButton Content="brrobe@microsoft.com" Margin="20,0,0,0" Click="HyperlinkButton_Click"></HyperlinkButton>
-                </StackPanel>
-            </Grid>
-        </StackPanel>
-        <Button x:Name="buttonClose" Content="Close" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="20,20,20,20" Click="buttonClose_Click"/>
+                <Button x:Name="buttonClose" Content="Save &amp;  Close" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="20,20,20,20" Click="buttonClose_Click"/>
+            </StackPanel>
+        </ScrollViewer>
     </Grid>
 </Page>
