--- a/src/CognitiveKioskUWP/SettingsPage.xaml
+++ b/src/CognitiveKioskUWP/SettingsPage.xaml
@@ -6,7 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" d:DesignWidth="1578"  d:DesignHeight="1578" >
 
     <Grid>
 
@@ -71,6 +71,29 @@
                         <ComboBox x:Name="dropdownCamera"  Margin="5" SelectionChanged="dropdownCamera_SelectionChanged" >
                             <ComboBoxItem Content="east"></ComboBoxItem>
                         </ComboBox>
+                </StackPanel>
+                <TextBlock Text="Familiar Faces" 
+                    Style="{StaticResource TitleTextBlockStyle}"
+                    Margin="0,40,0,0"
+                    FontWeight="Normal"/>
+                <StackPanel Margin="0,10,0,0">
+                    <TextBlock Text="Add Person" ></TextBlock>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBox x:Name="textNewPerson" Text="" Margin="5" Width="400px" TextChanged="textFaceAPIKey_TextChanged" HorizontalAlignment="Left" Height="32" />
+                        <Button x:Name="buttonAddPerson" Content="Add" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="20,20,20,20" Click="ButtonAddPerson_Click" />
+
+                    </StackPanel>
+                </StackPanel>
+                <StackPanel Margin="0,10,0,0">
+                    <TextBlock Text="Faces" Margin="5" ></TextBlock>
+                    <StackPanel Orientation="Horizontal">
+                        <ComboBox x:Name="dropdownPerson"  Margin="5" SelectionChanged="DropdownPerson_SelectionChanged"  >
+                            <ComboBoxItem Content="east"></ComboBoxItem>
+                        </ComboBox>
+                        <Button x:Name="buttonAddImages" Content="Add Images" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="5" Click="ButtonAddImages_Click"  />
+                        <Button x:Name="buttonDeleteUser" Content="Delete" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="5" Click="ButtonDeleteUser_Click" />
+                    </StackPanel>
+                    <TextBlock x:Name="txtPersonFaceInfo" Text="Faces" Margin="5" ></TextBlock>
                 </StackPanel>
                 <Button x:Name="buttonClose" Content="Save &amp;  Close" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="20,20,20,20" Click="buttonClose_Click"/>
             </StackPanel>
