--- a/src/CognitiveKioskUWP/AgeControl.xaml
+++ b/src/CognitiveKioskUWP/AgeControl.xaml
@@ -5,13 +5,16 @@
     xmlns:local="using:MTCSTLKiosk"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Height="25"
-    Width="120">
+    mc:Ignorable="d">
+    <Grid>
+        <Grid Background="#FF00A4EF" x:Name="gridAgeIncluded" Visibility="Collapsed" >
+            <TextBlock x:Name="textSymbol" HorizontalAlignment="Right" Text="&#x1F622;"  VerticalAlignment="Center"  FocusVisualPrimaryBrush="#737373" Foreground="White" FontSize="12" FontWeight="Bold" FontFamily="Segoe UI Emoji" Margin="0,0,5,0" IsColorFontEnabled="True"/>
+            <TextBlock x:Name="textUser" TextAlignment="Center" VerticalAlignment="Center" Text="Female - 35" TextWrapping="Wrap" FocusVisualPrimaryBrush="#737373" Foreground="#fff" FontSize="12" FontWeight="Bold" FontFamily="Segoe UI" Margin="5,0,0,0"/>
 
-    <Grid Background="#FF00A4EF">
-        <TextBlock x:Name="textSymbol" HorizontalAlignment="Right" Text="&#x1F622;"  VerticalAlignment="Center"  FocusVisualPrimaryBrush="#737373" Foreground="White" FontSize="12" FontWeight="Bold" FontFamily="Segoe UI Emoji" Margin="0,0,5,0" IsColorFontEnabled="False"/>
-        <TextBlock x:Name="textUser" TextAlignment="Center" VerticalAlignment="Center" Text="Female - 35" TextWrapping="Wrap" FocusVisualPrimaryBrush="#737373" Foreground="#fff" FontSize="12" FontWeight="Bold" FontFamily="Segoe UI" Margin="5,0,0,0"/>
+        </Grid>
+        <Grid x:Name="gridEmoji" >
+            <TextBlock x:Name="textSymbol2" Text="&#x1F622;"  VerticalAlignment="Center"  FocusVisualPrimaryBrush="#737373" Foreground="White" FontSize="48" FontWeight="Bold" FontFamily="Segoe UI Emoji" Margin="0,0,5,0" IsColorFontEnabled="True"/>
 
+        </Grid>
     </Grid>
 </UserControl>
