--- a/src/CognitiveKioskUWP/Controls/Speech.xaml
+++ b/src/CognitiveKioskUWP/Controls/Speech.xaml
@@ -15,17 +15,22 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height=".5*"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width=".5*"/>
                 <ColumnDefinition Width=".5*"/>
             </Grid.ColumnDefinitions>
             <StackPanel Grid.Column="0" Grid.Row="1" Background="#827FBA00">
-                <TextBlock x:Name="textTranslationOriginalRT" HorizontalAlignment="Stretch" Text="" TextWrapping="Wrap" FontSize="26" TextAlignment="Left" Foreground="White" Margin="0,0,5,0"/>
-                <TextBlock x:Name="textTranslationOriginal" HorizontalAlignment="Stretch" Text="" TextWrapping="Wrap" FontSize="15" TextAlignment="Left" Margin="0,10,5,0" Foreground="White"/>
+                <TextBlock x:Name="textTranslationOriginalRT" HorizontalAlignment="Stretch" Text="" TextWrapping="Wrap" FontSize="26" TextAlignment="Left" Foreground="White" Margin="0,0,10,0"/>
+            </StackPanel>
+            <StackPanel Grid.Column="0" Grid.Row="2" Background="#827FBA00">
+                <TextBlock x:Name="textTranslationOriginal" HorizontalAlignment="Stretch" Text="" TextWrapping="Wrap" FontSize="15" TextAlignment="Left" Margin="0,10,10,0" Foreground="White"/>
             </StackPanel>
             <StackPanel Grid.Column="1" Background="#827FBA00" Grid.Row="1">
                 <TextBlock x:Name="textTranslationRT" HorizontalAlignment="Stretch" Text="" TextWrapping="Wrap" FontSize="26" TextAlignment="Left" Foreground="White"  />
+            </StackPanel>
+            <StackPanel Grid.Column="1" Background="#827FBA00" Grid.Row="2">
                 <TextBlock x:Name="textTranslation" HorizontalAlignment="Stretch" Text="" TextWrapping="Wrap" FontSize="15" TextAlignment="Left" Foreground="White" Margin="0,10,0,0" />
             </StackPanel>
         </Grid>
