--- a/src/CognitiveKioskUWP/SettingsPage.xaml
+++ b/src/CognitiveKioskUWP/SettingsPage.xaml
@@ -6,7 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" d:DesignWidth="1578"  d:DesignHeight="1578" >
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" d:DesignWidth="1578"  d:DesignHeight="5000" >
 
     <Grid>
 
@@ -59,6 +59,11 @@
                             <ComboBoxItem Content="east"></ComboBoxItem>
                         </ComboBox>
                 </StackPanel>
+
+                <TextBlock Text="Customer Vision (optional)" 
+                    Style="{StaticResource TitleTextBlockStyle}"
+                    Margin="0,40,0,0"
+                    FontWeight="Normal"/>
                 <StackPanel Margin="0,10,0,0">
                     <TextBlock Text="Custom Vision API Key (customvision.ai)" Margin="5" ></TextBlock>
                     <TextBox x:Name="textCustomVisionAPIKey" Text="" Margin="5" Width="400px" HorizontalAlignment="Left" TextChanged="TextCustomVisionAPIKey_TextChanged" />
@@ -83,6 +88,10 @@
 
                 </StackPanel>
                 <StackPanel Margin="0,10,0,0">
+                    <TextBlock Text="Custom Vision Frames Per Minute" Margin="5" ></TextBlock>
+                    <TextBox x:Name="textFramesPerMinute" Text="" Margin="5" Width="40px"  HorizontalAlignment="Left" TextChanged="TextFramesPerMinute_TextChanged"  />
+                </StackPanel>
+                <StackPanel Margin="0,10,0,0">
                     <TextBlock Text="Show age and gender (WARNING this is not recommended due to current MS policy)" Margin="5" ></TextBlock>
                     <ToggleSwitch x:Name="toggleShowAge"  Margin="5" Toggled="ToggleShowAge_Toggled" />
                 </StackPanel>
@@ -96,7 +105,7 @@
                             <ComboBoxItem Content="east"></ComboBoxItem>
                         </ComboBox>
                 </StackPanel>
-                <TextBlock Text="Familiar Faces" 
+                <TextBlock Text="Familiar Faces (optional)" 
                     Style="{StaticResource TitleTextBlockStyle}"
                     Margin="0,40,0,0"
                     FontWeight="Normal"/>
