--- a/src/CognitiveKioskUWP/SettingsPage.xaml
+++ b/src/CognitiveKioskUWP/SettingsPage.xaml
@@ -45,9 +45,7 @@
                 </StackPanel>
                 <StackPanel Margin="0,10,0,0">
                     <TextBlock Text="Vision Region" Margin="5" ></TextBlock>
-                        <ComboBox x:Name="dropdownVisionRegion"  Margin="5" SelectionChanged="dropdownVisionRegion_SelectionChanged">
-                            <ComboBoxItem Content="east"></ComboBoxItem>
-                        </ComboBox>
+                    <TextBox x:Name="textComputerVisionEndpoint" Text="" Margin="5" Width="400px"  HorizontalAlignment="Left" TextChanged="TextComputerVisionEndpoint_TextChanged" />
                 </StackPanel>
                 <StackPanel Margin="0,10,0,0">
                     <TextBlock Text="Face API Key" Margin="5" ></TextBlock>
@@ -55,9 +53,7 @@
                 </StackPanel>
                 <StackPanel Margin="0,10,0,0">
                     <TextBlock Text="Face Region"   Margin="5"></TextBlock>
-                        <ComboBox x:Name="dropdownFaceRegion"  Margin="5" SelectionChanged="dropdownFaceRegion_SelectionChanged">
-                            <ComboBoxItem Content="east"></ComboBoxItem>
-                        </ComboBox>
+                    <TextBox x:Name="textFaceEndPoint" Text="" Margin="5" Width="400px"  HorizontalAlignment="Left" TextChanged="TextFaceEndPoint_TextChanged" />
                 </StackPanel>
 
                 <TextBlock Text="Customer Vision (optional)" 
