--- a/src/CognitiveKioskUWP/SettingsPage.xaml
+++ b/src/CognitiveKioskUWP/SettingsPage.xaml
@@ -85,7 +85,7 @@
                 </StackPanel>
                 <StackPanel Margin="0,10,0,0">
                     <TextBlock Text="Custom Vision Frames Per Minute" Margin="5" ></TextBlock>
-                    <TextBox x:Name="textFramesPerMinute" Text="" Margin="5" Width="40px"  HorizontalAlignment="Left" TextChanged="TextFramesPerMinute_TextChanged"  />
+                    <TextBox x:Name="textFramesPerMinute" Text="" Margin="5"  HorizontalAlignment="Left" TextChanged="TextFramesPerMinute_TextChanged"  />
                 </StackPanel>
                 <TextBlock Text="Hardware" 
                     Style="{StaticResource TitleTextBlockStyle}"
@@ -96,6 +96,11 @@
                         <ComboBox x:Name="dropdownCamera"  Margin="5" SelectionChanged="dropdownCamera_SelectionChanged" >
                             <ComboBoxItem Content="east"></ComboBoxItem>
                         </ComboBox>
+                </StackPanel>
+
+                <StackPanel Margin="0,10,0,0">
+                    <TextBlock Text="Use conversations (Requires specfic region and kinect)" Margin="5" ></TextBlock>
+                    <ToggleSwitch x:Name="toggleConversations"  Margin="5" Toggled="toggleConversations_Toggled"  />
                 </StackPanel>
                 <TextBlock Text="Familiar Faces (optional)" 
                     Style="{StaticResource TitleTextBlockStyle}"
