--- a/src/CognitiveKioskUWP/SettingsPage.xaml
+++ b/src/CognitiveKioskUWP/SettingsPage.xaml
@@ -48,33 +48,10 @@
                     <TextBox x:Name="textComputerVisionEndpoint" Text="" Margin="5" Width="400px"  HorizontalAlignment="Left" TextChanged="TextComputerVisionEndpoint_TextChanged" />
                 </StackPanel>
 
-                <TextBlock Text="Customer Vision (optional)" 
+                <TextBlock Text="Vision Info" 
                     Style="{StaticResource TitleTextBlockStyle}"
                     Margin="0,40,0,0"
                     FontWeight="Normal"/>
-                <StackPanel Margin="0,10,0,0">
-                    <TextBlock Text="Custom Vision API Key (customvision.ai)" Margin="5" ></TextBlock>
-                    <TextBox x:Name="textCustomVisionAPIKey" Text="" Margin="5" Width="400px" HorizontalAlignment="Left" TextChanged="TextCustomVisionAPIKey_TextChanged" />
-                </StackPanel>
-                <StackPanel Margin="0,10,0,0">
-                    <TextBlock Text="Custom Vision Region"   Margin="5"></TextBlock>
-                    <ComboBox x:Name="dropdownCustomVisionRegion"  Margin="5" SelectionChanged="DropdownCustomVisionRegion_SelectionChanged" >
-                        <ComboBoxItem Content="east"></ComboBoxItem>
-                    </ComboBox>
-                </StackPanel>
-                <StackPanel Margin="0,10,0,0">
-                    <TextBlock Text="Custom Vision Project ID (customvision.ai in URL)" Margin="5" ></TextBlock>
-                    <TextBox x:Name="textCustomVisionProjectID" Text="" Margin="5" Width="400px"  HorizontalAlignment="Left" TextChanged="TextCustomVisionProjectID_TextChanged" />
-                </StackPanel>
-                <StackPanel Margin="0,10,0,0">
-                    <TextBlock Text="Custom Vision Iteration Name (customvision.ai 'Pusblished As')" Margin="5" ></TextBlock>
-                    <TextBox x:Name="textCustomVisionIterationName" Text="" Margin="5" Width="400px"  HorizontalAlignment="Left" TextChanged="TextCustomVisionIterationName_TextChanged" />
-                </StackPanel>
-                <StackPanel Margin="0,10,0,0">
-                    <TextBlock Text="Custom Vision Threshold" Margin="5" ></TextBlock>
-                    <Slider x:Name="sliderCustomVision" Width="200" HorizontalAlignment="Left" Maximum="100"  ValueChanged="Slider_ValueChanged"/>
-
-                </StackPanel>
                 <StackPanel Margin="0,10,0,0">
                     <TextBlock Text="Custom Vision Frames Per Minute" Margin="5" ></TextBlock>
                     <TextBox x:Name="textFramesPerMinute" Text="" Margin="5"  HorizontalAlignment="Left" TextChanged="TextFramesPerMinute_TextChanged"  />
