--- a/src/CognitiveKioskUWP/SettingsPage.xaml
+++ b/src/CognitiveKioskUWP/SettingsPage.xaml
@@ -45,7 +45,23 @@
                 </StackPanel>
                 <StackPanel Margin="0,10,0,0">
                     <TextBlock Text="Vision URL (https://***.api.cognitive.microsoft.com/sts/v1.0/issuetoken)" Margin="5" ></TextBlock>
-                    <TextBox x:Name="textComputerVisionEndpoint" Text="" Margin="5" Width="400px"  HorizontalAlignment="Left" TextChanged="TextComputerVisionEndpoint_TextChanged" />
+                    <TextBox x:Name="textComputerVisionEndpoint" Text="" Margin="5" Width="400px"  HorizontalAlignment="Left" TextChanged="TextComputerVisionEndpoint_TextChanged"  />
+                </StackPanel>
+                <StackPanel Margin="0,10,0,0">
+                    <TextBlock Text="Open AI URL (https://**.openai.azure.com)" Margin="5" ></TextBlock>
+                    <TextBox x:Name="textOpenAIUrl" Text="" Margin="5" Width="400px"  HorizontalAlignment="Left" TextChanged="textOpenAIUrl_TextChanged" />
+                </StackPanel>
+                <StackPanel Margin="0,10,0,0">
+                    <TextBlock Text="Open AI Key" Margin="5" ></TextBlock>
+                    <TextBox x:Name="textOpenAIKey" Text="" Margin="5" Width="400px"  HorizontalAlignment="Left" TextChanged="textOpenAIKey_TextChanged"  />
+                </StackPanel>
+                <StackPanel Margin="0,10,0,0">
+                    <TextBlock Text="Open AI Model" Margin="5" ></TextBlock>
+                    <TextBox x:Name="textOpenAIModel" Text="" Margin="5" Width="400px"  HorizontalAlignment="Left" TextChanged="textOpenAIModel_TextChanged" />
+                </StackPanel>
+                <StackPanel Margin="0,10,0,0">
+                    <TextBlock Text="Open AI Prompt" Margin="5" ></TextBlock>
+                    <TextBox x:Name="textOpenAIPrompt" Text="" Margin="5" Width="600px" HorizontalAlignment="Left" AcceptsReturn="True" TextWrapping="Wrap" Height="100" TextChanged="textOpenAIPrompt_TextChanged"/>
                 </StackPanel>
 
                 <TextBlock Text="Vision Info" 
